Added Record functionality

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <bc-app>Loading...</bc-app>
+  <rec-app>Loading...</rec-app>
 </body>
 </html>
