--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <rec-app>Loading...</rec-app>
+  <rec-app>
+    <div class="spinner">
+    </div>
+  </rec-app>
 </body>
 </html>
